--- a/plugins/google-play-services/billing/overview.html
+++ b/plugins/google-play-services/billing/overview.html
@@ -204,6 +204,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="configure_purchase_handling.html">
+                                Purchase Handling
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link inactive" href="supporting_nodes.html">
                                 Supporting Nodes
                             </a>
@@ -268,7 +273,7 @@
                             <li class="blue-diamond">Check if a Feature is Supported</li>
                             <li class="blue-diamond">Handle Pending Purchases/Transactions</li>
                             <li class="blue-diamond">Show In-App Messages (Price Change Confirmations)</li>
-                            <li class="blue-diamond">Acknowledge/Consume Purchases Automatically in Google Play</li>
+                            <li class="blue-diamond">Handle Consumable/Non-Consumable In-App Purchases</li>
                             <li class="blue-diamond">Indicate Personalised Prices</li>
                         </ul>
                         <p class="content" style="margin-bottom: 0rem;">
