--- a/plugins/google-play-services/saved-games/conflict_resolution.html
+++ b/plugins/google-play-services/saved-games/conflict_resolution.html
@@ -338,12 +338,13 @@
                             <div class="modal-body">
                                 <img id="modal1-image"
                                     src="../../../images/SavedGames/SavedGames_Plugin_ConflictExample.png"
+                                    style="max-width: 1281px;"
                                     alt="Your Image">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div style="margin-bottom: 150px">
+                <div style="margin-bottom: 300px">
                 </div>
             </main>
             <div class="col-md-3 d-none d-md-block">
@@ -390,13 +391,6 @@
         </div>
     </footer>
 
-    <script>
-        var modal = document.getElementById("modalBody1");
-        var img = document.getElementById("modal1-image");
-
-        modal.style.width = img.width + "px";
-        modal.style.height = img.height + "px";
-    </script>
     <script src="../../../script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
