--- a/plugins/google-play-services/billing/enumerations.html
+++ b/plugins/google-play-services/billing/enumerations.html
@@ -204,6 +204,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="configure_purchase_handling.html">
+                                Purchase Handling
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link inactive" href="supporting_nodes.html">
                                 Supporting Nodes
                             </a>
